# doctools

./: .augmentignore  .gitignore  CLAUDE.md  README.md  README_CN.md  catalog.yaml  pyproject.toml  ruff.toml
config/: styles_registry.yaml
handoffs/: 2026-05-25-qual-supply-distill.md
lib/: __init__.py  chapter_numbering.py  docx_surgical.py  llm_client.py  progress.py  schemas.py  styles.py  text_fixes.py
raycast/_archive/: doc_normalize.sh  doc_restructure.sh  doc_to_word.sh
raycast/commands/: csv_from_txt.sh  csv_merge_txt.sh  csv_to_txt.sh  doc_check.sh  doc_convert.sh  doc_merge.sh  doc_normalize.sh  doc_preview.sh  doc_scan.sh  doc_scan_sensitive.sh  doc_split.sh  doc_to_word.sh  doc_view_md.sh  docx_apply_image_caption.sh  docx_apply_template.sh  docx_text_formatter.sh  docx_to_md.sh  md2word_pipeline.sh  md_docx_template.sh  md_formatter.sh  md_merge.sh  md_split_by_heading.sh  md_strip_blockquote.sh  pptx_apply_all.sh  pptx_font_yahei.sh  pptx_table_style.sh  pptx_text_formatter.sh  pptx_to_md.sh  xlsx_from_csv.sh  xlsx_from_txt.sh  xlsx_from_xls.sh  xlsx_lowercase.sh  xlsx_merge_tables.sh  xlsx_splitsheets.sh  xlsx_to_csv.sh  xlsx_to_txt.sh
raycast/lib/: run_python.sh
schemas/: decision.schema.json  patch.schema.json  plan.schema.json
scripts/data/: convert.py  data.py  xlsx_lowercase.py  xlsx_splitsheets.py
scripts/document/: bid_deref.py  bid_final.py  bid_finalize_sweep.py  bid_identity_gate.py  bid_print_ready.py  bid_residue_lib.py  bid_residue_scan.py  bullet_to_paragraph.py  chapter_renumber.py  chart.py  doc_dispatch.py  doc_gui_backend.py  (+31 more)
(+90 files in other folders)
